--- a/SimatekExChanger/xTestConsole.csproj
+++ b/SimatekExChanger/xTestConsole.csproj
@@ -56,6 +56,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EFconfigDB\EFconfigDB.csproj">
+      <Project>{68f3f4e4-7f1d-462d-b8a2-12f113fd9fc1}</Project>
+      <Name>EFconfigDB</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
