--- a/Global/ClassLibGlobal.csproj
+++ b/Global/ClassLibGlobal.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{FF2664CD-AB52-4DD9-B9E7-9DE81EEA383B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Global</RootNamespace>
+    <RootNamespace>ClassLibGlobal</RootNamespace>
     <AssemblyName>Global</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity.cs" />
+    <Compile Include="LogEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
