--- a/Global/ClassLibGlobal.csproj
+++ b/Global/ClassLibGlobal.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity.cs" />
+    <Compile Include="G.cs" />
     <Compile Include="gErrorEntity.cs" />
     <Compile Include="gLogEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
