Local DB start works

--- a/EFconfigDB/App.config
+++ b/EFconfigDB/App.config
@@ -9,6 +9,10 @@
           providerName="System.Data.SqlClient"
           connectionString="Data Source=(LocalDB)\v11.0;AttachDbFileName=|DataDirectory|\configDB.mdf;InitialCatalog=OneDB;Integrated Security=True;MultipleActiveResultSets=True"
          />
+    <add name="dbLocalConnectionString"
+      providerName="System.Data.SqlClient"
+      connectionString="Data Source=(LocalDB)\v11.0;AttachDbFileName=|DataDirectory|\EFlocal.mdf;InitialCatalog=OneDB;Integrated Security=True;MultipleActiveResultSets=True"
+         />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
