--- a/WPFinterface/WPFinterface.csproj
+++ b/WPFinterface/WPFinterface.csproj
@@ -139,9 +139,9 @@
       <Project>{8fa6ad7a-d71c-4464-9ae8-18106443081e}</Project>
       <Name>ClassLibOracle</Name>
     </ProjectReference>
-    <ProjectReference Include="..\EFconfigDB\EFconfigDB.csproj">
+    <ProjectReference Include="..\EFconfigDB\EFlocalDB.csproj">
       <Project>{68f3f4e4-7f1d-462d-b8a2-12f113fd9fc1}</Project>
-      <Name>EFconfigDB</Name>
+      <Name>EFlocalDB</Name>
     </ProjectReference>
     <ProjectReference Include="..\Global\ClassLibGlobal.csproj">
       <Project>{ff2664cd-ab52-4dd9-b9e7-9de81eea383b}</Project>
