--- a/ClassLibOracle/ClassLibOracle.csproj
+++ b/ClassLibOracle/ClassLibOracle.csproj
@@ -105,6 +105,12 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibOPC\ClassLibOPC.csproj">
+      <Project>{db85b424-be73-4cb3-ba1d-2b9a79f381ce}</Project>
+      <Name>ClassLibOPC</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
