--- a/EFconfigDB/EFlocalDB.csproj
+++ b/EFconfigDB/EFlocalDB.csproj
@@ -57,6 +57,7 @@
     <Compile Include="dbLocal\dbLocalRecord.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecordLocalToRemoteConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
