--- a/EFconfigDB/App.config
+++ b/EFconfigDB/App.config
@@ -1,27 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="OneConnectionString"
-          providerName="System.Data.SqlClient"
-          connectionString="Data Source=(LocalDB)\v11.0;AttachDbFileName=|DataDirectory|\configDB.mdf;InitialCatalog=OneDB;Integrated Security=True;MultipleActiveResultSets=True"
-         />
-    <add name="dbLocalConnectionString"
-      providerName="System.Data.SqlClient"
-      connectionString="Data Source=(LocalDB)\v11.0;AttachDbFileName=|DataDirectory|\EFlocal.mdf;InitialCatalog=OneDB;Integrated Security=True;MultipleActiveResultSets=True"
-         />
+    <add name="OneConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFileName=|DataDirectory|\configDB.mdf;InitialCatalog=OneDB;Integrated Security=True;MultipleActiveResultSets=True"/>
+    <add name="dbLocalConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFileName=|DataDirectory|\EFlocal.mdf;InitialCatalog=OneDB;Integrated Security=True;MultipleActiveResultSets=True"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+        <parameter value="mssqllocaldb"/>
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
