--- a/Global/ClassLibGlobal.csproj
+++ b/Global/ClassLibGlobal.csproj
@@ -62,6 +62,7 @@
     <Compile Include="gErrorEntity.cs" />
     <Compile Include="gEventArgs.cs" />
     <Compile Include="gLogEntity.cs" />
+    <Compile Include="gSpecialEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
