--- a/WPFinterface/SimatekExchanger.csproj
+++ b/WPFinterface/SimatekExchanger.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{947454D7-943D-4AE5-BCE7-18CDCE313BE7}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WPFinterface</RootNamespace>
-    <AssemblyName>WPFinterface</AssemblyName>
+    <RootNamespace>SimatekExChanger</RootNamespace>
+    <AssemblyName>SimatekExChanger</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -56,6 +56,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>SimatekExIcon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -75,6 +78,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Data.OracleClient" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -177,6 +181,15 @@
       <Project>{ff2664cd-ab52-4dd9-b9e7-9de81eea383b}</Project>
       <Name>ClassLibGlobal</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\simatek.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sicon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="SimatekExIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
