--- a/ClassLibOracle/ClassLibOracle.csproj
+++ b/ClassLibOracle/ClassLibOracle.csproj
@@ -45,7 +45,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\x86\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
@@ -79,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="oraManualFields.cs" />
     <Compile Include="oraEntity.cs" />
     <Compile Include="oraEventArgs.cs" />
     <Compile Include="OraExchanger.cs" />
