autorestart when shut down

--- a/WPFinterface/App.config
+++ b/WPFinterface/App.config
@@ -4,6 +4,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="SimatekExChanger.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
@@ -45,4 +48,20 @@
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
+  <userSettings>
+    <SimatekExChanger.Properties.Settings>
+      <setting name="isFirstBoot" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="isAutoRestart" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="isSimpleLook" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="configPath" serializeAs="String">
+        <value>configConnectionString</value>
+      </setting>
+    </SimatekExChanger.Properties.Settings>
+  </userSettings>
 </configuration>
