--- a/WPFinterface/SimatekExchanger.csproj
+++ b/WPFinterface/SimatekExchanger.csproj
@@ -97,6 +97,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Extenders.cs" />
+    <Compile Include="wndLoading.xaml.cs">
+      <DependentUpon>wndLoading.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ucDBtblLocal.xaml.cs">
       <DependentUpon>ucDBtblLocal.xaml</DependentUpon>
     </Compile>
@@ -109,6 +112,10 @@
     <Compile Include="wndDBbrowser.xaml.cs">
       <DependentUpon>wndDBbrowser.xaml</DependentUpon>
     </Compile>
+    <Page Include="wndLoading.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
