--- a/WPFinterface/App.config
+++ b/WPFinterface/App.config
@@ -24,7 +24,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle"/>
-    <add name="OraContext" connectionString="metadata=res://*/OraModel.csdl|res://*/OraModel.ssdl|res://*/OraModel.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;data source=mns1-191n:1521/xe;password=qazwsx;persist security info=True;user id=SYSTEM&quot;" providerName="System.Data.EntityClient"/>
+    <add name="OraConnString" connectionString="metadata=res://*/OraModel.csdl|res://*/OraModel.ssdl|res://*/OraModel.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=mns1-191n:1521/xe;PASSWORD=wincc_opc;PERSIST SECURITY INFO=True;USER ID=OPC_SRV&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
