--- a/WPFinterface/App.config
+++ b/WPFinterface/App.config
@@ -62,6 +62,9 @@
       <setting name="configPath" serializeAs="String">
         <value>configConnectionString</value>
       </setting>
+      <setting name="isAutoSynhronisation" serializeAs="String">
+        <value>False</value>
+      </setting>
     </SimatekExChanger.Properties.Settings>
   </userSettings>
 </configuration>
