--- a/WPFinterface/Properties/Settings.settings
+++ b/WPFinterface/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="configPath" Type="System.String" Scope="User">
       <Value Profile="(Default)">configConnectionString</Value>
     </Setting>
+    <Setting Name="isAutoSynhronisation" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
